--- a/css/style.css
+++ b/css/style.css
@@ -780,6 +780,12 @@ ul {
   border: 2px solid #2196f3;
 }
 
+.input-wrap :focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+
 .check-label {
   display: flex;
   align-items: center;
@@ -795,6 +801,11 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.modal-form-field :focus {
+  outline: none;
+  border-color: var(--accent-color);
 }
 
 .checkbox:checked + .check-label > .icon-check {
